@@ -12,7 +12,7 @@ if defined?(DataMapper)
           
           def included_with_attr_encrypted(base)
             included_without_attr_encrypted(base)
-            base.attr_encrypted_options.merge!(:encode => true, :marshal => true)
+            base.attr_encrypted_options[:encode] = true
           end
         end
       end
