@@ -1,3 +1,6 @@
+2009-01-13 - Sean Huber (shuber@huberry.com)
+  * :marshal no longer defaults to true in ORM adapters
+
 2009-01-12 - Sean Huber (shuber@huberry.com)
   * Remove read_attribute and write_attribute methods - unnecessary
   * ActiveRecord and DataMapper extensions are now "adapters"
